--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<table>
 		
 			<td>
-			<h2>&nbsp; Kian Suministrado Fernando <br></h2>
-			<p style="padding-right: 40;">&nbsp; #133 Calamansi St. Tramo Heights</p>
-			<p style="padding-right: 40;">&nbsp; Purok 6 Sucat Muntinlupa City</p>
-       	    <p style="padding-right: 40;">&nbsp; 09204096551</p>
+			<h2>&nbsp; Name <br></h2>
+			<p style="padding-right: 40;">&nbsp; Private</p>
+			<p style="padding-right: 40;">&nbsp; </p>
+       	    <p style="padding-right: 40;">&nbsp; private</p>
        	</td>
 			<td>
 			<img src="yeah.jpg" class="ey">
@@ -30,22 +30,22 @@
        	<div class="box-1">
           	 <h2>&nbsp; Educational Background:</h2>
        	     <h3>&nbsp; Secondary Education:</h3>
-       	           <p style="padding-left:55%;">Informatics College</p>
+       	           <p style="padding-left:55%;">Private</p>
 				   <p style="padding-left:55%;">  Alabang, Northgate</p>
 				   <p style="padding-left:55%;"> Muntinlupa City</p>
 				   <p style="padding-left:55%;">2018-2019</p><br><br>
 
-				   <p style="padding-left:55%;"> Muntinlupa Business Highshool</p>
+				   <p style="padding-left:55%;"> Private</p>
 				   <p style="padding-left:55%;"> Sucat - Annex</p>
 				   <p style="padding-left:55%;">Sucat,Muntinlupa </p>
 				   <p style="padding-left:55%;">2014-2018</p><br><br>
 
 	     <h3>&nbsp; Elementary Education:</h3>
-	                <p style="padding-left:55%;">Sucat Elementay School Main</p>
+	                <p style="padding-left:55%;">Private</p>
 	                <p style="padding-left:55%;">Sucat,Muntinlupa </p>
 	                <p style="padding-left:55%;">2012-2014 </p><br><br>
 
-	                <p style="padding-left:55%;">Bagong Tanyag Elementary School-Annex 1  </p>
+	                <p style="padding-left:55%;">Private </p>
 	                <p style="padding-left:55%;">Tanyag,Taguig </p>
 	                <p style="padding-left:55%;">2008-2012 </p><br>
        	</div>
@@ -65,43 +65,43 @@
        	 	<hr>
        	<div class="box-1">
        		  	<h2>&nbsp; Organization Affiliation:</h2>
-	    	        <p style="padding-left:55%;">InforMATHics Wizard Society(IWS)</p>
+	    	        <p style="padding-left:55%;">Private</p>
 	    	        <p style="padding-left:55%;">Treasurer</p>
 	    	        <p style="padding-left:55%;">2019-2020</p><br><br>
-	    	        <p style="padding-left:55%;">Informatics Technological Club</p>
+	    	        <p style="padding-left:55%;">Private</p>
 	    	        <p style="padding-left:55%;">Technical</p>
 	    	        <p style="padding-left:55%;">2019-2020</p><br><br>
-	    	        <p style="padding-left:55%;">MilleniARTS</p>
+	    	        <p style="padding-left:55%;">Private/p>
 	    	        <p style="padding-left:55%;">Member</p>
 	    	        <p style="padding-left:55%;">2018-2020</p><br>
        	</div>
        	<hr>
        	<div class="box-1">
        		<h2>&nbsp; Reference Persons</h2>
-	    	        <p style="padding-left:55%;">Marilit Gregorio</p>
+	    	        <p style="padding-left:55%;">Private</p>
 	    	        <p style="padding-left:55%;">SHS Lecturer</p>
-	    	        <p style="padding-left:55%;">Informatics College Northgate</p><br><br>
-	    	        <p style="padding-left:55%;">Jasper Diaz</p>
+	    	        <p style="padding-left:55%;">Private</p><br><br>
+	    	        <p style="padding-left:55%;">Private</p>
 	    	        <p style="padding-left:55%;">SHS Lecturer</p>
-	    	        <p style="padding-left:55%;">Informatics College Northgate</p><br><br>
-	    	        <p style="padding-left:55%;">Rommel Lagurin</p>
+	    	        <p style="padding-left:55%;">Private</p><br><br>
+	    	        <p style="padding-left:55%;">Private</p>
 	    	        <p style="padding-left:55%;">SHS Lecturer</p>
-	    	        <p style="padding-left:55%;">Informatics College Northgate</p><br><br>
+	    	        <p style="padding-left:55%;">Private</p><br><br>
        	</div>
        	<hr>
        	<div class="box-1">
        		    <h2>&nbsp; Personal Information</h2>
 	                <p style="padding-left:49%;">Religion: &nbsp; Roman Catholic </p>
 	                <p style="padding-left:49%;">Civil Status: &nbsp; Single </p>
-	                <p style="padding-left:49%;">Birthday: &nbsp; January 06,2002 </p>
-	                <p style="padding-left:49%;">Birthplace: &nbsp; Makati </p>
+	                <p style="padding-left:49%;">Birthday: &nbsp; Private </p>
+	                <p style="padding-left:49%;">Birthplace: &nbsp; Private </p>
 	                <p style="padding-left:49%;">Height: &nbsp; 5'7" </p>
 	                <p style="padding-left:49%;">Weight: &nbsp; 60kgs </p>
-	                <p style="padding-left:49%;">Citizenship: &nbsp; Filipino </p>
+	                <p style="padding-left:49%;">Citizenship: &nbsp; Private </p>
 	                <p style="padding-left:49%;">Gender: &nbsp; Male </p>
-	                <p style="padding-left:49%;">Mother's Name: &nbsp; Marylou Fernando </p>
+	                <p style="padding-left:49%;">Mother's Name: &nbsp; Private </p>
 	                <p style="padding-left:49%;">Occupation: &nbsp; House Wife </p>
-	                <p style="padding-left:49%;">Father's Name: &nbsp; Gener Fernando </p>
+	                <p style="padding-left:49%;">Father's Name: &nbsp; Private </p>
 	                <p style="padding-left:49%;">Occupation: &nbsp; Traffic Auxiliary </p>
        	</div>
        	 	<hr>
