--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
           	 <h2>&nbsp; Educational Background:</h2>
        	     <h3>&nbsp; Secondary Education:</h3>
        	           <p style="padding-left:55%;">Private</p>
-				   <p style="padding-left:55%;">  Alabang, Northgate</p>
-				   <p style="padding-left:55%;"> Muntinlupa City</p>
+				   <p style="padding-left:55%;">  Private</p>
+				   <p style="padding-left:55%;"> Private</p>
 				   <p style="padding-left:55%;">2018-2019</p><br><br>
 
 				   <p style="padding-left:55%;"> Private</p>
-				   <p style="padding-left:55%;"> Sucat - Annex</p>
-				   <p style="padding-left:55%;">Sucat,Muntinlupa </p>
+				   <p style="padding-left:55%;"> Private</p>
+				   <p style="padding-left:55%;">Private </p>
 				   <p style="padding-left:55%;">2014-2018</p><br><br>
 
 	     <h3>&nbsp; Elementary Education:</h3>
 	                <p style="padding-left:55%;">Private</p>
-	                <p style="padding-left:55%;">Sucat,Muntinlupa </p>
+	                <p style="padding-left:55%;">Private </p>
 	                <p style="padding-left:55%;">2012-2014 </p><br><br>
 
 	                <p style="padding-left:55%;">Private </p>
-	                <p style="padding-left:55%;">Tanyag,Taguig </p>
+	                <p style="padding-left:55%;">Private </p>
 	                <p style="padding-left:55%;">2008-2012 </p><br>
        	</div>
        	 	<hr>
@@ -108,7 +108,7 @@
        	 <div class="box-1">
         	<h4> &nbsp; I hereby certify that the aboveinformation is true and correct to the best knowledge and beliefs</h4>
         </div>
-         <h4 style="padding-left: 70%; padding-top: 12%;">Kian Suministrado Fernando</h4>
+         <h4 style="padding-left: 70%; padding-top: 12%;">Name</h4>
        
 
 
